--- a/src/css/home.css
+++ b/src/css/home.css
@@ -6,7 +6,7 @@
   #home_img {
     height: 100%;
     background-color: purple;
-    background: url(assets/images/bg.jpg);
+    background: url(/src/assets/images/bg.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -32,5 +32,6 @@
     background-color: var(--transparent-shade);
     color: var(--yello-cream-shade);
     text-align: center;
+    overflow: hidden;
   }
 }
